--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@react-navigation/material-bottom-tabs": "^5.3.19",
     "@react-navigation/native": "5.9.4",
     "@react-navigation/stack": "5.14.5",
+    "moment": "^2.29.4",
     "react": "18.2.0",
     "react-hook-form": "^7.43.1",
     "react-native": "0.71.2",
@@ -32,6 +33,7 @@
     "react-native-safe-area-context": "^4.5.0",
     "react-native-screens": "^3.19.0",
     "react-native-simple-toast": "^2.0.0",
+    "react-native-svg": "^13.8.0",
     "react-native-vector-icons": "^9.2.0",
     "styled-components": "^5.3.6"
   },
@@ -49,6 +51,7 @@
     "jest": "^29.2.1",
     "metro-react-native-babel-preset": "0.73.7",
     "prettier": "^2.4.1",
+    "react-native-svg-transformer": "^1.0.0",
     "react-test-renderer": "18.2.0",
     "typescript": "4.8.4"
   },
