--- a/android/build.gradle
+++ b/android/build.gradle
@@ -9,6 +9,9 @@ buildscript {
 
         // We use NDK 23 which has both M1 support and is the side-by-side NDK version from AGP.
         ndkVersion = "23.1.7779620"
+
+        googlePlayServicesVersion = "16.1.0" // default: "+"
+        firebaseVersion = "17.3.4" // default: "+"
     }
     repositories {
         google()
