--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@react-native-firebase/app": "^17.3.1",
     "@react-native-firebase/auth": "^17.3.0",
     "@react-native-firebase/firestore": "^17.3.1",
+    "@react-native-firebase/messaging": "^17.3.2",
     "@react-navigation/bottom-tabs": "^5.11.15",
     "@react-navigation/drawer": "^5.12.9",
     "@react-navigation/material-bottom-tabs": "^5.3.19",
@@ -34,6 +35,7 @@
     "react-native-screens": "^3.19.0",
     "react-native-simple-toast": "^2.0.0",
     "react-native-svg": "^13.8.0",
+    "react-native-toast-notifications": "^3.3.1",
     "react-native-vector-icons": "^9.2.0",
     "styled-components": "^5.3.6"
   },
