--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "ios": "react-native run-ios",
     "lint": "eslint .",
     "start": "react-native start",
-    "test": "jest"
+    "test": "jest",
+    "android-emu":"~/Library/Android/sdk/emulator/emulator -avd android_11"
   },
   "dependencies": {
     "@emotion/react": "^11.10.5",
